--- a/ide.html
+++ b/ide.html
@@ -17,12 +17,13 @@
     <header>
 
         <nav>
-            <a href="#Xcode">Xcode</a>
-            <a href="#Vscode">Vscode</a>
-            <a href="#Eclipse">Eclipse</a>
-            <a class="active" href="#home">  Integrated Development Environment</a>
 
-
+            <a href="ide3.html">Eclipse</a>
+            <a href="ide2.html">Visual Studio Code</a>
+            <a href="ide1.html">Xcode</a>
+            <!-- <a href="#Xcode">Xcode</a> -->
+            <!-- Enlever le # et le remplacer une fois le html crée -->
+            <a class="active" href="ide.html">  Integrated Development Environment</a>
 
         </nav>
 
@@ -30,13 +31,8 @@
 
 
     <main>
-
-        <div class="navbar">
-
-        </div>
-  
-        <div class="textprésentation">
-            <h1>Définition</h1>
+            <div class="textprésentation">
+                <h1>Définition</h1>
 
             <p>
                 Integrated Development Environment (en français « environnement de développement »), est un logiciel
@@ -47,17 +43,13 @@
             </p>
     
                <ul>
-                  <li>un éditeur de code intelligent (coloration, autocomplétion, mise en forme) ;</li><br>
+                  <li><a href="https://www.ionos.fr/digitalguide/sites-internet/developpement-web/editeurs-de-code/">un éditeur de code intelligent</a>  (coloration, autocomplétion, mise en forme) ;</li><br>
                   <li> un simulateur (logiciel permettant de tester l’exécution de son logiciel) ;</li><br>
-                  <li>un compilateur (qui va transformer le code source rédigé par le développeur en code binaire, composé de 0 et de 1 uniquement) ;</li><br>
-                  <li>un débogueur (fonctionnalité d’aide à la correction de bugs), etc.</li><br>
+                  <li><a href="https://fr.wikipedia.org/wiki/Compilateur">un compilateur</a> (qui va transformer le code source rédigé par le développeur en code binaire, composé de 0 et de 1 uniquement) ;</li><br>
+                  <li><a href="https://fr.wikipedia.org/wiki/Débogueur">un débogueur</a> (fonctionnalité d’aide à la correction de bugs), etc.</li><br>
                   <li> Certains permettent de développer pour un système d’exploitation spécifique, d’autres sont polyvalent.</li>
                </ul>
         </div>
-
-              <div class="vidéoprésentationide">
-
-              </div>
 
     </main>
 
