--- a/ide.html
+++ b/ide.html
@@ -31,16 +31,19 @@
 
 
     <main>
-            <div class="textprésentation">
+            <div class="tracking-in-expand">
                 <h1>Définition</h1>
+            </div>
 
-            <p>
+            <div class="textprésentation">
+
+            <article>
                 Integrated Development Environment (en français « environnement de développement »), est un logiciel
                qui rassemble des outils permettant de développer d’autres logiciels tels que des applications mobiles,
                des logiciels pour ordinateur ou consoles de jeux, des sites web, etc ; ainsi que de réaliser des librairies
                ou des frameworks, c’est-à-dire des morceaux de code qui pourront être sauvegardés et réutilisés dans d’autres
                programmes. Les outils d’un IDE peuvent être :
-            </p>
+            </article>
     
                <ul>
                   <li><a href="https://www.ionos.fr/digitalguide/sites-internet/developpement-web/editeurs-de-code/">un éditeur de code intelligent</a>  (coloration, autocomplétion, mise en forme) ;</li><br>
