--- a/ide2.html
+++ b/ide2.html
@@ -28,6 +28,7 @@
         </nav>
 
     </header>
+
     <main>
 
         <div class="logovscode">
@@ -38,12 +39,12 @@
             <a target="_blank" href="https://visualstudio.microsoft.com/fr/vs/mac/">
                 <img src="images/appstore.png" alt="Vscodeapp"></a>
 
-                <a target="_blank" href="https://code.visualstudio.com/docs/setup/windows">
-                    <img src="images/windows.png" alt="VsCodewindows"></a>
+            <a target="_blank" href="https://code.visualstudio.com/docs/setup/windows">
+                <img src="images/windows.png" alt="VsCodewindows"></a>
         </div>
 
         <div class="textevscode">
-            <p>
+            <article>
                 Visual Studio Code est un éditeur de code extensible développé par Microsoft pour Windows,
                 Linux et macOS2.Les fonctionnalités incluent la prise en charge du débogage, la mise en
                 évidence de la syntaxe, la complétion intelligente du code, les snippets, la refactorisation
@@ -52,8 +53,72 @@
                 Le code source de Visual Studio Code provient du projet logiciel libre et open source VSCode
                 de Microsoft publié sous la licence MIT permissive, mais les binaires compilés sont des logiciels
                 gratuits pour toute utilisation.
-            </p>
+            </article><br>
+        </div>
 
+        <div id="vscode">
+            <div class="vscode1">
+                <p>
+                    La première étape consiste à créer un nouveau projet. Pour ce faire, chargez le programme VS Code.
+                    Vous devriez être accueilli avec l'écran d'accueil typique. Pour créer le premier programme,
+                    sélectionnez
+                    " Démarrer "> " Nouveau fichier " dans l'écran d'accueil. Cela va ouvrir une nouvelle fenêtre de
+                    fichier.
+                    Allez-y et enregistrez le fichier (" Fichier "> " Enregistrer ") dans un nouveau répertoire. Vous
+                    pouvez nommer
+                    le répertoire comme vous le souhaitez, mais cet exemple appelle le répertoire " VSC_HelloWorld " et
+                    le fichier " HelloWorld.cpp ".
+                </p><br>
+
+                <img src="images/vscode/vscode1.png">
+            </div>
+
+            <div class="vscode2">
+                <p>
+                    Exécuter le script (basique) Nous pouvons exécuter " HelloWorld.cpp " depuis le code VS lui-même. Le
+                    moyen le plus simple
+                    d’exécuter un tel programme est d’ouvrir le terminal intégré (" Affichage "> " Terminal intégré ").
+                    Cela ouvre une fenêtre
+                    de terminal dans la partie inférieure de la vue. De l'intérieur de ce terminal, nous pouvons
+                    naviguer dans notre répertoire créé,
+                    créer et exécuter le script que nous avons écrit.
+                </p><br>
+
+                <img src="images/vscode/vscode2.png">
+            </div>
+
+            <div class="vscode3">
+                <p>
+                    Lancer le script (un peu plus avancé)
+                    Génial, mais nous pouvons utiliser le code VS directement pour créer et exécuter le code également.
+                    Pour cela, nous devons d'abord transformer le répertoire
+                    " VSC_HelloWorld " en espace de travail. Cela peut être fait par:<br>
+                    1. Ouverture du menu de l' explorateur (le plus haut élément du menu vertical à l'extrême gauche)
+                    <br>2. Sélectionnez le bouton Ouvrir un dossier
+                    <br>3. Sélectionnez le répertoire " VSC_HelloWorld " dans lequel nous travaillons.<br>
+                </p><br>
+
+                <img src="images/vscode/vscode3.png">
+            </div>
+
+            <div class="vscode4">
+                <p>
+                    L'étape 1 consistera à créer un nouveau projet. Cela peut être fait de plusieurs manières. Le
+                    premier moyen provient directement de l'interface utilisateur.<br>
+                    1. Programme Open VS Code. Vous serez accueilli avec l'écran d'accueil standard (notez que les
+                    images sont prises pendant que vous travaillez sur un Mac, mais qu'elles doivent être similaires à
+                    votre installation):<br>
+                    2. Dans le menu Démarrer , sélectionnez Nouveau fichier . Cela ouvrira une nouvelle fenêtre
+                    d'édition où nous pourrons commencer à construire notre script. Allez-y et enregistrez ce fichier
+                    (vous pouvez utiliser le menu Fichier > Enregistrer pour le faire). Pour cet exemple, nous allons
+                    appeler le fichier HelloWorld.cpp et le placer dans un nouveau répertoire que nous appellerons
+                    VSC_HelloWorld / .<br>
+                    3. Écrivez le programme. Cela devrait être assez simple, mais n'hésitez pas à copier ce qui suit
+                    dans le fichier:
+                </p><br>
+
+                <img src="images/vscode/vscode4.png">
+            </div>
         </div>
 
 
