--- a/ide3.html
+++ b/ide3.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="texteeclipse">
-            <p>
+            <article>
                 Eclipse est un projet, décliné et organisé en un ensemble de sous-projets de développements logiciels,
                 de la fondation Eclipse visant à développer un environnement de production de logiciels libre qui soit
                 extensible, universel et polyvalent, en s'appuyant principalement sur Java. Son objectif est de produire
@@ -61,7 +61,61 @@
                 Cela a conduit à une extension du périmètre initial d'Eclipse à toute production de logiciel : c'est
                 l'apparition
                 du framework Eclipse RCP en 2004.
-            </p>
+            </article>
+
+            <br>
+
+            <p>
+                Pour la présentation de la dernière IDE, le contenu que j'ai jugé comme étant le plus pertinent à mon sens <br>
+                était une série de vidéos sur Youtube, qui plus est, en Français (merci Toréa) il y a au total 16 vidéos,<br>
+                donc soyez attentif. Cette série de vidéos, contient la dernière version d'Eclipse.
+            </p><br>
+
+        </div>
+
+        <div id="vidéoeclipse">
+
+            <div class="vidéoeclipse1">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/aUMzYHNQM0k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/GaZuDecu82U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <div class="vidéoeclipse2">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fG8pb-RQXlI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hgj2Oq4WTI0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <div class="vidéoeclipse3">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/aP_f09G0boY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RAygrT79RU4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <div class="vidéoeclipse4">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dE66YfFuVWc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/928ePRmCZvw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <div class="vidéoeclipse5">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RcAhSLUPJlw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Lin-pc-fc-A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
+            </div>
+
+            <div class="vidéoeclipse6">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/WfpDPLsWLus" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YhpzUubGg4Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>         
+            </div>
+
+            <div class="vidéoeclipse7">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/opCxycFXbV4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-ntvDQ5Wkcc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     
+            </div>
+
+            <div class="vidéoeclipse8">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MZ7pIMwpbos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gLnbGcGxopY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
         </div>
 
     </main>
